fixed vertical spacing

--- a/pages/sports-scorecard/index.css
+++ b/pages/sports-scorecard/index.css
@@ -22,14 +22,18 @@ body {
 .score-segment {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     width: 120px;
 }
 
 .score-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #080001;
     width: 100%;
-    height: 100px;
+    height: 80px;
     border-radius: 8%;
     color: #F94F6D;
     font-family: scoreboard-font;
@@ -38,15 +42,17 @@ body {
 }
 
 .team-name {
+    margin-top: 12px;
+    margin-bottom: 12px;
     font-family: Verdana;
-    font-size: large;
+    font-size: xx-large;
 }
 
 .button-container {
     display: flex;
     justify-content: space-between;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    margin-top: 12px;
+    margin-bottom: 12px;
     width: 100%;
 }
 
